--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -11,7 +11,7 @@ System iQuest został stworzony w oparciu o model architektury trójwarstwowej, 
 
 \begin{figure}[H]
 \centering\includegraphics[width=15cm]{figures/marketecture}
-\caption{Diagram "Marketektury"}\label{rys:marketecture}
+\caption{Diagram ,,Marketektury''}\label{rys:marketecture}
 \end{figure}
 
 System iQuest to aplikacja internetowa w postaci zbioru rozszerzeń platformy e-learningowej Moodle. Całość (Moodle oraz rozszrzenia) zainstalowana jest na serwerze www, zlokalizowanym w sieci Politechniki Poznańskiej, łączącym się z osobnym serwerem baz danych oraz usługami eKonto i eDziekanat. Funkcje raportowania realizowane są w głównej mierze za pośrednictwem zewnętrznego systemu BI, pobierającego dane z iQuest za pośrednictwem usług sieciowych (en.~\definicja{webservices}). Administracja oraz obsługa systemu odbywa się za pośrednictwem przeglądarki internetowej, w ramach połączenia z platformą Moodle lub serwerem raportowania. Respondenci mogą też uzyskać dostęp do systemu przy pomocy urządzeń mobilnych, takich jak tablety czy smartfony.
@@ -69,9 +69,9 @@ Komponenty te odpowiadają za komunikację z usługami eDziekanat i ePoczta, poz
 Dzięki temu komponentowi możliwe jest szeregowanie oraz wykonywanie zadań w tle. Jednym z jego zadań jest kolejkowanie i aktywowanie mechanizmów rozsyłania wiadomości e-mail z zaproszeniami do udziału w ankiecie.
 
 \subsubsection{eKonto Authentication Plugin}
-\label(Chapter5325}
+\label{Chapter5325}
 
-eKonto Authentication Plugin -- to moduł uwierzytelniania (en.~\definicja{Authentication}), korzystający z systemu eLogin platformy eKonto do logowania się do platformy Moodle, obsługującej system iQuest. Korzystanie z tego systemu pozwala nie tylko na jednoznaczną weryfikację tożsamości użytkownika łączącego się z systemem, ale jest zarazem wygodne - dzięki jego zastosowaniu, nie ma potrzeby posiadania osobnego konta w systemie iQuest.
+eKonto Authentication Plugin -- to moduł uwierzytelniania (ang.~\definicja{Authentication}), korzystający z systemu eLogin platformy eKonto do logowania się do platformy Moodle, obsługującej system iQuest. Korzystanie z tego systemu pozwala nie tylko na jednoznaczną weryfikację tożsamości użytkownika łączącego się z systemem, ale jest zarazem wygodne -- dzięki jego zastosowaniu, nie ma potrzeby posiadania osobnego konta w systemie iQuest.
 
 \subsection{Perspektywa implemetancyjna}
 \label{Chapter533}
