--- a/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
+++ b/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
@@ -1,4 +1,5 @@
 \section{Powiązanie back-endu z interfejsem}
 \label{Chapter67}
 
-%brak treści?
+%Ja to robiłem - KU
+\emph{Moodle} jako paradygmat programowania stosuje podejście proceduralne 
