--- a/thesis/06-1-Technologie-LW.tex
+++ b/thesis/06-1-Technologie-LW.tex
@@ -17,7 +17,7 @@ Ze względu na fakt, iż programiści \textit{Moodle'a} wykonują testy jednostk
 \begin{itemize}
 \item{Selenium IDE -- zintegrowane środowisko programistyczne dla skryptów \emph{Selenium} -- zaimplementowane jako rozszerzenie dla przeglądarki internetowej Firefox. Pozwala na: nagrywanie i odtwarzanie sekwencji kroków, wykonywanych podczas pracy z przeglądarką, eksport skryptów do kodu języków programowania (np. \emph{Java}).}
 \item{Selenium Client Drivers (\emph{Java}) -- sterownik klienta dla języka Java, pozwalający na wykonywanie skryptów \emph{Selenium} z poziomu języka \emph{Java}},
-\item{HtmlUnit Driver} -- Implementacja klasy \emph{WebDriver}, która emuluje zachowanie przeglądarki. Pozwala na uruchamianie skryptów \emph{Selenium} bez korzystania z przeglądarki internetowej.}
+\item{HtmlUnit Driver -- Implementacja klasy \emph{WebDriver}, która emuluje zachowanie przeglądarki. Pozwala na uruchamianie skryptów \emph{Selenium} bez korzystania z przeglądarki internetowej.}
 \end{itemize}
 
 \subsection{PostgreSQL}
